[package]
name = "az-burrow"
version = "0.2.0"
edition = "2021"
description = "A cosy terminal UI for managing Azure Bastion SSH tunnels"
license = "AGPL-3.0-only"

[[bin]]
name = "az-burrow"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync", "io-util"] }
tokio-util = "0.7"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"
regex = "1"
chrono = "0.4"
color-eyre = "0.6"
home = "0.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
# (TestBackend ships inside ratatui; no extra dev-deps needed yet)
